Fixed overflow hidden bug that was hiding the header when anchoring down the page.

--- a/src/components/styles/_basics.scss
+++ b/src/components/styles/_basics.scss
@@ -29,7 +29,6 @@ html {
   color: var(--colorTextMain);
   margin: auto;
   max-width: var(--globalMaxWidth);
-  overflow: hidden;
 }
 
 a,
